[update] getMeリクエスト時にclientPrefsKeyをreduxに格納する修正
